<resources>
    <string name="app_name">DreamAssigments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password">password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">LOGIN</string>


</resources>
