<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/loginn">




            <TextView
                android:id="@+id/tv1"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"

                android:text="@string/create_an_account"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="normal" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:textColor="@color/Black"
                    android:id="@+id/name"
                    style="@style/floating_et"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:textColor="@color/Black"
                    android:id="@+id/uname"
                    style="@style/floating_et"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true"

                >

                <EditText
                    android:textColor="@color/Black"
                    android:id="@+id/passw"
                    style="@style/floating_et"
                    android:hint="password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutmobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimary"

                >

                <EditText
                    android:textColor="@color/Black"
                    android:id="@+id/mobileno"
                    style="@style/floating_et"
                    android:hint="@string/mobile_no"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/login_btn"

                android:layout_width="match_parent"

                android:layout_height="60dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="8dp"
                android:enabled="true"

                android:gravity="center"
                android:onClick="doSignIn"
                android:text="@string/register" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>


