<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/loginn">




            <TextView
                android:id="@+id/tv1"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Login "

                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:textStyle="normal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/uname"
                    style="@style/floating_et"
                    android:hint="Email"

                    android:textColor="@color/Black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true"


                >

                <EditText
                    android:id="@+id/passw"
                    style="@style/floating_et"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/Black" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView

                    android:id="@+id/tv_forgetpasword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="normal" />
                </LinearLayout>





            <Button
                android:id="@+id/login_btn"

                android:layout_width="match_parent"

                android:layout_height="60dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="8dp"
                android:enabled="true"
                android:onClick="doSignIn"

                android:gravity="center"

                android:text="@string/login" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
